auto fill art collection

--- a/Assets/Resources/Configs/I18n/English.json
+++ b/Assets/Resources/Configs/I18n/English.json
@@ -1,6 +1,7 @@
 {
     "collection": [
         { "k": "0001", "v": "Animal" },
-        { "k": "0002", "v": "Food" }
+        { "k": "0002", "v": "Food" },
+        { "k": "0003", "v": "Default" }
     ]
 }
